--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <body>
-  ≤‚ ‘≤‚ ‘opera
+    <div id="app"></div>
   </body>
+  <script>
+    var dom = document.querySelector('#app');
+    dom.innerHtml = 1;
+  </script>
 </html>
