--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
+  <head>
+    <style type="text/css">
+    body{
+      'font-size': 16px;
+    }
+    .withRem {
+      'font-size': 2rem;
+    }
+    </style>
+  </head>
   <body>
     <div id="app"></div>
+    <div class="base">233</div>
+    <div class="withRem">233</div>
     <script type="text/javascript">
       var dom = document.querySelector('#app');
       var value = 1;
