--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <style type="text/css">
     body{
-      'font-size': 16px;
+      font-size: 16px;
     }
     .withRem {
-      'font-size': 2rem;
+      font-size: 2rem;
     }
     </style>
   </head>
