--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     body{
       font-size: 16px;
     }
-    .withRem {
-      font-size: 2rem;
+     .msg {
+       display: none;
+     }
+     .withRem {
+       font-size: 0.5rem;
+     }
+     @media screen and (min-width: 240px) {
+       .s240 {
+         display: block;
+       }
+       .s320 {
+         display: none;
+       }
+       .s480 {
+         display: none;
+       }
+       .withRem {
+         font-size: 2rem;
+       }
+     }
+    @media screen and (min-width: 320px) {
+      .s240 {
+        display: none;
+      }
+      .s320 {
+        display: block;
+      }
+      .s480 {
+        display: none;
+      }
+      .withRem {
+        font-size: 3rem;
+      }
     }
+    @media screen and (min-width: 480px) {
+      .s240 {
+        display: none;
+      }
+      .s320 {
+        display: none;
+      }
+      .s480 {
+        display: block;
+      }
+      .withRem {
+        font-size: 4rem;
+      }
+    }
+  
+  
     </style>
   </head>
   <body>
     <div id="app"></div>
+    <div class="msg s480">current rules is 320-480</div>
+    <div class="msg s320">current rules is 240-320</div>
+    <div class="msg s240">current rules is less than 240</div>
     <div class="base">233</div>
     <div class="withRem">233</div>
     <script type="text/javascript">
