--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
      .withRem {
        font-size: 0.5rem;
      }
+     .area {
+       height: 4rem;
+       background-color: gray;
+     }
      @media screen and (min-width: 240px) {
        .s240 {
          display: block;
@@ -63,6 +67,7 @@
     <div class="msg s240">current rules is less than 240</div>
     <div class="base">233</div>
     <div class="withRem">233</div>
+    <div class="area"></div>
     <script type="text/javascript">
       var dom = document.querySelector('#app');
       var value = 1;
