--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
       var dom = document.querySelector('#app');
       var value = 1;
       dom.innerText = value;
-      setInterval(function() {
-        dom.innerText = ++value;
-      }, 5100);
+      // setInterval(function() {
+      //   dom.innerText = ++value;
+      // }, 1000);
+      setTimeout(function() {
+        window.location.reload();
+      }, 5000)
     </script>
   </body>
   
