--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       dom.innerText = value;
       setInterval(function() {
         //dom.innerText = ++value;
-        location.reload();
+        location.href = location.href;
       }, 4000);
       // setTimeout(function() {
       //   window.location.reload();
