--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6]], 2"</div>
   <div id="array-label">CR2 return array: <span id="array"></span></div>
   <div id="result-label">result: <span id="result"></span></div>
-  <button id="confirm">calculate</button>
+  <button id="confirm" onclick="showPopup()">calculate1</button>
   <div class="container">
-    <div class="mask"></div>
+    <div class="mask" onclick="document.querySelector('.container').style.display = 'none'"></div>
     <div class="popup"></div>
   </div>
   <script type="text/javascript">
@@ -91,9 +91,9 @@
       var curDom = document.querySelector('.container');
       var popup = document.querySelector('.popup');
       var mask = document.querySelector('.mask');
-      mask.addEventListener('click', function(e){
-        curDom.style.display = 'none';
-      });
+      // mask.addEventListener('click', function(e){
+      //   curDom.style.display = 'none';
+      // });
       if(!curDom) {
         // var curDom = document.createElement('div');
         // var popup = document.createElement('div');
@@ -116,13 +116,13 @@
       }
     }
     
-    confirmDom.addEventListener('click', function(e){
-      var arr = CR2(testArray, num);
-      var result = calculate(arr);
-      resultDom.innerText = result;
-      arrayDom.innerText = JSON.stringify(arr);
-      showPopup('The result is ' + result);
-    });
+    // confirmDom.addEventListener('click', function(e){
+    //   var arr = CR2(testArray, num);
+    //   var result = calculate(arr);
+    //   resultDom.innerText = result;
+    //   arrayDom.innerText = JSON.stringify(arr);
+    //   showPopup('The result is ' + result);
+    // });
   </script>
 </body>
 
