--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
   <h1>test</h1>
-  <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6]], 2"</div>
+  <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]], 2"</div>
   <div id="array-label">CR2 return array: <span id="array"></span></div>
   <div id="result-label">result: <span id="result"></span></div>
   <button id="confirm">calculate22</button>
@@ -48,8 +48,8 @@
   </div>
   <script type="text/javascript">
   alert(123132);
-    var testArray = [[1,3], [2,4], [5,6]];
-    var num = 2;
+    var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4]];
+    var num = 7;
     var resultDom = document.querySelector('#result');
     var arrayDom = document.querySelector('#array');
     var confirmDom = document.querySelector('#confirm');
@@ -119,9 +119,9 @@
     
     confirmDom.addEventListener('click', function(e){
       var arr = CR2(testArray, num);
-      var result = calculate(arr);
-      resultDom.innerText = result;
-      arrayDom.innerText = JSON.stringify(arr);
+      var result = 111;
+      // resultDom.innerText = result;
+      // arrayDom.innerText = JSON.stringify(arr);
       showPopup('The result is ' + result);
     });
   </script>
