--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 <body>
   <h1>test</h1>
   <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]], 2"</div>
-  <div id="array-label">CR2 return array: <span id="array"></span></div>
+  <!-- <div id="array-label">CR2 return array: <span id="array"></span></div> -->
   <div id="result-label">result: <span id="result"></span></div>
-  <button id="confirm">calculate22</button>
+  <button id="confirm">calculate</button>
   <div class="container">
     <div class="mask"></div>
     <div class="popup"></div>
   </div>
   <script type="text/javascript">
   alert(123132);
-    var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4]];
+    var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]];
     var num = 7;
     var resultDom = document.querySelector('#result');
     var arrayDom = document.querySelector('#array');
@@ -119,8 +119,8 @@
     
     confirmDom.addEventListener('click', function(e){
       var arr = CR2(testArray, num);
-      var result = 111;
-      // resultDom.innerText = result;
+      var result = calculate(arr);
+      resultDom.innerText = result;
       // arrayDom.innerText = JSON.stringify(arr);
       showPopup('The result is ' + result);
     });
