--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
 <body>
   <h1>test</h1>
-  <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]], 2"</div>
+  <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]], 7"</div>
   <!-- <div id="array-label">CR2 return array: <span id="array"></span></div> -->
   <div id="result-label">result: <span id="result"></span></div>
-  <button id="confirm">calculate</button>
+  <button id="confirm">calculate233</button>
   <div class="container">
     <div class="mask"></div>
     <div class="popup"></div>
