--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <h1>test</h1>
+  <h1>test calculate</h1>
   <div id="app">test function CR2; arguments is "[[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]], 5"</div>
   <!-- <div id="array-label">CR2 return array: <span id="array"></span></div> -->
   <div id="result-label">result: <span id="result"></span></div>
@@ -46,6 +46,15 @@
     <div class="mask"></div>
     <div class="popup"></div>
   </div>
+  
+  <h1>test select</h1>
+  <select id="select">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+  </select>
+  <div id="value">you select </div>
   <script type="text/javascript">
 
     var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]];
@@ -123,6 +132,12 @@
       resultDom.innerText = result;
       // arrayDom.innerText = JSON.stringify(arr);
       showPopup('The result is ' + result);
+    });
+    
+    var selectDom = document.querySelector('#select');
+    var selectVal = document.querySelector('#value');
+    selectDom.addEventListener('change', function(e){
+      selectVal.innerText = 'you select ' + selectDom.value;
     });
   </script>
 </body>
