--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
     <div class="mask"></div>
     <div class="popup"></div>
   </div>
-  
+  <div class="iconfont icon-loading">+108</div>
+  <div class="iconfont icon-rugby">+109</div>
   <h1>test select</h1>
   <select id="select">
     <option value="1">1</option>
