--- a/index.html
+++ b/index.html
@@ -243,8 +243,16 @@
     <div class="mask"></div>
     <div class="popup"></div>
   </div>
-  <div class="iconfont icon-loading">+108</div>
-  <div class="iconfont icon-rugby">+109</div>
+  <div class="iconfont icon-loading"></div>
+  <div class="iconfont icon-rugby"></div>
+  <div class="iconfont icon-licensex"></div>
+  <div class="iconfont icon-chatx"></div>
+  <div class="iconfont icon-loudspeaker"></div>
+  <div class="iconfont icon-Safaricomgray"></div>
+  <div class="iconfont icon-livechatx"></div>
+  <div class="iconfont icon-HideAndSeeCopy"></div>
+  <div class="iconfont icon-Play"></div>
+  <div class="iconfont icon-Swich_OFF"></div>
   <h1>test select</h1>
   <select id="select">
     <option value="1">1</option>
