--- a/index.html
+++ b/index.html
@@ -261,6 +261,9 @@
     <option value="4">4</option>
   </select>
   <div id="value">you select </div>
+  
+  <input></input>
+  <div><input type="number"></input></div>
   <script type="text/javascript">
 
     var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]];
