--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
   
   <input></input>
   <div><input type="number"></input></div>
+  <div><input type="date"></input></div>
+  <div><input type="password"></input></div>
   <script type="text/javascript">
 
     var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]];
