--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <div id="value">you select </div>
   
   <input></input>
-  <div><input type="number"></input></div>
+  <div><input type="submit"></input></div>
   <div><input type="date"></input></div>
   <div><input type="password"></input></div>
   <script type="text/javascript">
