update add favicon

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
     #confirm {
       background-color: gray; 
     }
+    
+    .submit{
+      background-image: url(./favicon.ico);
+    }
   </style>
 </head>
 
@@ -263,7 +267,7 @@
   <div id="value">you select </div>
   
   <input></input>
-  <div><input type="submit"></input></div>
+  <div><input type="submit" class="submit"></input></div>
   <div><input type="date"></input></div>
   <div><input type="password"></input></div>
   <script type="text/javascript">
