--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
   
   <input></input>
   <div><input type="submit" class="submit"></input></div>
-  <div><input type="date"></input></div>
-  <div><input type="password"></input></div>
+  <div><input placeholder="placeholder"></input></div>
+  <div><input type="password" placeholder="password"></input></div>
   <script type="text/javascript">
 
     var testArray = [[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6],[1,3], [2,4], [5,6]];
