--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   
   <input></input>
   <div><input type="submit" class="submit"></input></div>
-  <div><input placeholder="placeholder" style="border-color: black"></input></div>
+  <div><input placeholder="placeholder" style="border: 1px solid #B1B1B6"></input></div>
   <div><input type="password" placeholder="password"></input></div>
   <script type="text/javascript">
 
