--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
     .submit{
       background-image: url(./favicon.ico);
     }
+    .block {
+      height: 20px;
+      opacity: 0.2;
+      background-color: black;
+    }
   </style>
 </head>
 
@@ -267,6 +272,7 @@
   <div id="value">you select </div>
   
   <input></input>
+  <div class="block"></div>
   <div><input type="submit" class="submit"></input></div>
   <div><input placeholder="placeholder" style="border: 1px solid #B1B1B6"></input></div>
   <div><input type="password" placeholder="password"></input></div>
